Removed candleIndexProvider. Now index migrated directly in candle entity